--- a/example.env
+++ b/example.env
@@ -1,6 +1,7 @@
 BOT_SHARD_ID=0
 BOT_SHARD_TOTAL=100
 BOT_TOKEN=
+BOT_UPDATE_COMMANDS=false
 DB_USER=basura
 DB_PASS=basura
 DB_URL=jdbc:postgresql://localhost:5432/basura
