Update example env

--- a/example.env
+++ b/example.env
@@ -1,7 +1,4 @@
-BOT_SHARD_ID=0
-BOT_SHARD_TOTAL=100
-BOT_TOKEN=
-BOT_UPDATE_COMMANDS=false
+TOKEN=
 DB_USER=basura
 DB_PASS=basura
 DB_URL=jdbc:postgresql://localhost:5432/basura
