Add message commands

--- a/ssh.gradle
+++ b/ssh.gradle
@@ -16,13 +16,11 @@ task deploy {
     doLast {
         ssh.run {
             session(remotes.raspi) {
-                remove '/bot/basura/bin', '/bot/basura/lib', fileTransfer: 'scp'
-            }
-            session(remotes.raspi) {
+                remove '/bot/basura/bin', '/bot/basura/lib'
                 put from: "$buildDir/install/basura", into: '/bot', fileTransfer: 'scp'
             }
             session(remotes.raspiAdmin) {
-                execute 'sudo systemctl restart vivy'
+                execute 'sudo systemctl restart basura'
             }
         }
     }
