Add paginator timeout

--- a/ssh.gradle
+++ b/ssh.gradle
@@ -12,13 +12,21 @@ remotes {
     }
 }
 
-task deploy {
+tasks.register('deploy') {
     doLast {
         ssh.run {
             session(remotes.raspi) {
                 remove '/bot/basura/bin', '/bot/basura/lib'
                 put from: "$buildDir/install/basura", into: '/bot', fileTransfer: 'scp'
             }
+        }
+    }
+}
+
+tasks.register('restartRemote') {
+    dependsOn tasks.deploy
+    doLast {
+        ssh.run {
             session(remotes.raspiAdmin) {
                 execute 'sudo systemctl restart basura'
             }
